[gd_scene load_steps=5 format=3 uid="uid://cru1l0tws2wib"]

[ext_resource type="Script" path="res://modules/module1.gd" id="1_8xtk3"]
[ext_resource type="ArrayMesh" uid="uid://lmd8pa272fqe" path="res://assets/models/module1.obj" id="1_f8wai"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_spnpl"]
data = PackedVector3Array(-2, 0, -2, -2, 0.2, 1.8, -2, 0, 2, -2, 0, -2, -2, 0.2, -1.8, -2, 0.2, 1.8, -2, 0.2, 1.8, -2, 1.2, 2, -2, 0, 2, -2, 0.2, 1.8, -2, 1.2, 1.8, -2, 1.2, 2, -2, 0, -2, -2, 1.2, -1.8, -2, 0.2, -1.8, -2, 0, -2, -2, 1.2, -2, -2, 1.2, -1.8, 0, 0.2, 1.5, 0, 0.9, 1.5, 0, 0.2, 1.6, 0, 0.2, 1, 0, 0.9, 1.1, 0, 0.2, 1.1, 0, 0.2, 0.2, 0, 0.9, 0.2, 0, 0.2, 0.3, 0, 0.2, -0.3, 0, 0.9, -0.2, 0, 0.2, -0.2, 0, 0.2, -1.1, 0, 0.9, -1.1, 0, 0.2, -1, 0, 0.2, -1.6, 0, 0.9, -1.5001, 0, 0.2, -1.5001, 0, 0.9, 1.5, 0, 1, 1.6, 0, 0.2, 1.6, 0, 0.9, 1.1, 0, 1, 1.6, 0, 0.9, 1.5, 0, 0.2, 1, 0, 1, 1, 0, 0.9, 1.1, 0, 0.9, 1.1, 0, 1, 1, 0, 1, 1.6, 0, 0.9, 0.2, 0, 1, 0.3, 0, 0.2, 0.3, 0, 0.9, -0.2, 0, 1, 0.3, 0, 0.9, 0.2, 0, 0.2, -0.3, 0, 1, -0.3, 0, 0.9, -0.2, 0, 0.9, -0.2, 0, 1, -0.3, 0, 1, 0.3, 0, 0.9, -1.1, 0, 1, -1, 0, 0.2, -1, 0, 0.9, -1.5001, 0, 1, -1, 0, 0.9, -1.1, 0, 0.2, -1.6, 0, 1, -1.6, 0, 0.9, -1.5001, 0, 0.9, -1.5001, 0, 1, -1.6, 0, 1, -1, 0.0999, 0.2, 1.5, 0.0999, 0.2, 1.6, 0.0999, 0.9, 1.5, 0.0999, 0.2, 1, 0.0999, 0.2, 1.1, 0.0999, 0.9, 1.1, 0.0999, 0.2, 0.2, 0.0999, 0.2, 0.3, 0.0999, 0.9, 0.2, 0.0999, 0.2, -0.3, 0.0999, 0.2, -0.2, 0.0999, 0.9, -0.2, 0.0999, 0.2, -1.1, 0.0999, 0.2, -1, 0.0999, 0.9, -1.1, 0.0999, 0.2, -1.6, 0.0999, 0.2, -1.5001, 0.0999, 0.9, -1.5001, 0.0999, 0.9, 1.5, 0.0999, 0.2, 1.6, 0.0999, 1, 1.6, 0.0999, 0.9, 1.1, 0.0999, 0.9, 1.5, 0.0999, 1, 1.6, 0.0999, 0.2, 1, 0.0999, 0.9, 1.1, 0.0999, 1, 1, 0.0999, 0.9, 1.1, 0.0999, 1, 1.6, 0.0999, 1, 1, 0.0999, 0.9, 0.2, 0.0999, 0.2, 0.3, 0.0999, 1, 0.3, 0.0999, 0.9, -0.2, 0.0999, 0.9, 0.2, 0.0999, 1, 0.3, 0.0999, 0.2, -0.3, 0.0999, 0.9, -0.2, 0.0999, 1, -0.3, 0.0999, 0.9, -0.2, 0.0999, 1, 0.3, 0.0999, 1, -0.3, 0.0999, 0.9, -1.1, 0.0999, 0.2, -1, 0.0999, 1, -1, 0.0999, 0.9, -1.5001, 0.0999, 0.9, -1.1, 0.0999, 1, -1, 0.0999, 0.2, -1.6, 0.0999, 0.9, -1.5001, 0.0999, 1, -1.6, 0.0999, 0.9, -1.5001, 0.0999, 1, -1, 0.0999, 1, -1.6, 2, 0, -2, 2, 0, 2, 2, 0.2, 1.8, 2, 0, -2, 2, 0.2, 1.8, 2, 0.2, -1.8, 2, 0.2, 1.8, 2, 0, 2, 2, 1.2, 2, 2, 0.2, 1.8, 2, 1.2, 2, 2, 1.2, 1.8, 2, 0, -2, 2, 0.2, -1.8, 2, 1.2, -1.8, 2, 0, -2, 2, 1.2, -1.8, 2, 1.2, -2, -2, 1.2, 2, 2, 0, 2, -2, 0, 2, -2, 1.2, 2, 2, 1.2, 2, 2, 0, 2, 0, 1, 1.6, 0.0999, 0.2, 1.6, 0, 0.2, 1.6, 0, 1, 1.6, 0.0999, 1, 1.6, 0.0999, 0.2, 1.6, 0, 0.9, 1.1, 0.0999, 0.2, 1.1, 0, 0.2, 1.1, 0, 0.9, 1.1, 0.0999, 0.9, 1.1, 0.0999, 0.2, 1.1, 0, 1, 0.3, 0.0999, 0.2, 0.3, 0, 0.2, 0.3, 0, 1, 0.3, 0.0999, 1, 0.3, 0.0999, 0.2, 0.3, 0, 0.9, -0.2, 0.0999, 0.2, -0.2, 0, 0.2, -0.2, 0, 0.9, -0.2, 0.0999, 0.9, -0.2, 0.0999, 0.2, -0.2, 0, 1, -1, 0.0999, 0.2, -1, 0, 0.2, -1, 0, 1, -1, 0.0999, 1, -1, 0.0999, 0.2, -1, 0, 0.9, -1.5001, 0.0999, 0.2, -1.5001, 0, 0.2, -1.5001, 0, 0.9, -1.5001, 0.0999, 0.9, -1.5001, 0.0999, 0.2, -1.5001, -2, 1.2, -1.8, 2, 0.2, -1.8, -2, 0.2, -1.8, -2, 1.2, -1.8, 2, 1.2, -1.8, 2, 0.2, -1.8, -2, 1.2, 1.8, -2, 0.2, 1.8, 2, 0.2, 1.8, -2, 1.2, 1.8, 2, 0.2, 1.8, 2, 1.2, 1.8, 0, 0.9, 1.5, 0, 0.2, 1.5, 0.0999, 0.2, 1.5, 0, 0.9, 1.5, 0.0999, 0.2, 1.5, 0.0999, 0.9, 1.5, 0, 1, 1, 0, 0.2, 1, 0.0999, 0.2, 1, 0, 1, 1, 0.0999, 0.2, 1, 0.0999, 1, 1, 0, 0.9, 0.2, 0, 0.2, 0.2, 0.0999, 0.2, 0.2, 0, 0.9, 0.2, 0.0999, 0.2, 0.2, 0.0999, 0.9, 0.2, 0, 1, -0.3, 0, 0.2, -0.3, 0.0999, 0.2, -0.3, 0, 1, -0.3, 0.0999, 0.2, -0.3, 0.0999, 1, -0.3, 0, 0.9, -1.1, 0, 0.2, -1.1, 0.0999, 0.2, -1.1, 0, 0.9, -1.1, 0.0999, 0.2, -1.1, 0.0999, 0.9, -1.1, 0, 1, -1.6, 0, 0.2, -1.6, 0.0999, 0.2, -1.6, 0, 1, -1.6, 0.0999, 0.2, -1.6, 0.0999, 1, -1.6, -2, 1.2, -2, -2, 0, -2, 2, 0, -2, -2, 1.2, -2, 2, 0, -2, 2, 1.2, -2, 2, 0, 2, -2, 0, -2, -2, 0, 2, 2, 0, 2, 2, 0, -2, -2, 0, -2, 0.0999, 0.9, 1.5, 0, 0.9, 1.1, 0, 0.9, 1.5, 0.0999, 0.9, 1.5, 0.0999, 0.9, 1.1, 0, 0.9, 1.1, 0.0999, 0.9, 0.2, 0, 0.9, -0.2, 0, 0.9, 0.2, 0.0999, 0.9, 0.2, 0.0999, 0.9, -0.2, 0, 0.9, -0.2, 0.0999, 0.9, -1.1, 0, 0.9, -1.5001, 0, 0.9, -1.1, 0.0999, 0.9, -1.1, 0.0999, 0.9, -1.5001, 0, 0.9, -1.5001, 2, 0.2, 1.8, -2, 0.2, 1.8, 0, 0.2, 1.6, 2, 0.2, 1.8, 0, 0.2, 1.6, 0.0999, 0.2, 1.6, 0, 0.2, 1.6, -2, 0.2, 1.8, 0, 0.2, 1.5, 2, 0.2, 1.8, 0.0999, 0.2, 1.6, 0.0999, 0.2, 1.5, 0, 0.2, 1.5, -2, 0.2, 1.8, 0, 0.2, 1.1, 0.0999, 0.2, 1.5, 0, 0.2, 1.5, 0, 0.2, 1.1, 2, 0.2, 1.8, 0.0999, 0.2, 1.5, 0.0999, 0.2, 1.1, 0.0999, 0.2, 1.5, 0, 0.2, 1.1, 0.0999, 0.2, 1.1, 0, 0.2, 1.1, -2, 0.2, 1.8, 0, 0.2, 1, 2, 0.2, 1.8, 0.0999, 0.2, 1.1, 0.0999, 0.2, 1, 0, 0.2, 1, -2, 0.2, 1.8, 0, 0.2, 0.3, 0.0999, 0.2, 1, 0, 0.2, 1, 0, 0.2, 0.3, 2, 0.2, 1.8, 0.0999, 0.2, 1, 0.0999, 0.2, 0.3, 0.0999, 0.2, 1, 0, 0.2, 0.3, 0.0999, 0.2, 0.3, 0, 0.2, 0.3, -2, 0.2, 1.8, 0, 0.2, 0.2, 2, 0.2, 1.8, 0.0999, 0.2, 0.3, 0.0999, 0.2, 0.2, 0, 0.2, 0.2, -2, 0.2, 1.8, 0, 0.2, -0.2, 0.0999, 0.2, 0.2, 0, 0.2, 0.2, 0, 0.2, -0.2, 2, 0.2, 1.8, 0.0999, 0.2, 0.2, 0.0999, 0.2, -0.2, 0.0999, 0.2, 0.2, 0, 0.2, -0.2, 0.0999, 0.2, -0.2, 0, 0.2, -0.2, -2, 0.2, 1.8, 0, 0.2, -0.3, 2, 0.2, 1.8, 0.0999, 0.2, -0.2, 0.0999, 0.2, -0.3, 0, 0.2, -0.3, -2, 0.2, 1.8, 0, 0.2, -1, 0.0999, 0.2, -0.3, 0, 0.2, -0.3, 0, 0.2, -1, 2, 0.2, 1.8, 0.0999, 0.2, -0.3, 0.0999, 0.2, -1, 0.0999, 0.2, -0.3, 0, 0.2, -1, 0.0999, 0.2, -1, 0, 0.2, -1, -2, 0.2, 1.8, 0, 0.2, -1.1, 2, 0.2, 1.8, 0.0999, 0.2, -1, 0.0999, 0.2, -1.1, 0, 0.2, -1.1, -2, 0.2, 1.8, 0, 0.2, -1.5001, 0.0999, 0.2, -1.1, 0, 0.2, -1.1, 0, 0.2, -1.5001, 2, 0.2, 1.8, 0.0999, 0.2, -1.1, 0.0999, 0.2, -1.5001, 0.0999, 0.2, -1.1, 0, 0.2, -1.5001, 0.0999, 0.2, -1.5001, 0, 0.2, -1.5001, -2, 0.2, 1.8, 0, 0.2, -1.6, 2, 0.2, 1.8, 0.0999, 0.2, -1.5001, 0.0999, 0.2, -1.6, 0, 0.2, -1.6, -2, 0.2, 1.8, -2, 0.2, -1.8, 0.0999, 0.2, -1.6, 0, 0.2, -1.6, -2, 0.2, -1.8, 2, 0.2, 1.8, 0.0999, 0.2, -1.6, 2, 0.2, -1.8, 0.0999, 0.2, -1.6, -2, 0.2, -1.8, 2, 0.2, -1.8, 0.0999, 1, 1.6, 0, 1, 1.6, 0, 1, 1, 0.0999, 1, 1.6, 0, 1, 1, 0.0999, 1, 1, 0.0999, 1, 0.3, 0, 1, 0.3, 0, 1, -0.3, 0.0999, 1, 0.3, 0, 1, -0.3, 0.0999, 1, -0.3, 0.0999, 1, -1, 0, 1, -1, 0, 1, -1.6, 0.0999, 1, -1, 0, 1, -1.6, 0.0999, 1, -1.6, 2, 1.2, 2, -2, 1.2, 2, -2, 1.2, 1.8, 2, 1.2, 2, -2, 1.2, 1.8, 2, 1.2, 1.8, 2, 1.2, -1.8, -2, 1.2, -1.8, -2, 1.2, -2, 2, 1.2, -1.8, -2, 1.2, -2, 2, 1.2, -2)

[sub_resource type="BoxShape3D" id="BoxShape3D_4qhi4"]
size = Vector3(1.32129, 2.7644, 0.330463)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_8xtk3")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = ExtResource("1_f8wai")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_spnpl")

[node name="Gates" type="Node3D" parent="."]

[node name="Gate1" type="Area3D" parent="Gates"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.0251176, 0.709734, -1.28187)

[node name="Label3D" type="Label3D" parent="Gates/Gate1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.017567, 0.432918, 0.105994)
text = "Gate 1"
font_size = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Gates/Gate1"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.0183105, -0.225988, -0.0756971)
shape = SubResource("BoxShape3D_4qhi4")

[node name="Gate2" type="Area3D" parent="Gates"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.025, 0.71, 0.0187831)

[node name="Label3D" type="Label3D" parent="Gates/Gate2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.86265e-09, 0.432918, 0.105994)
text = "Gate 2"
font_size = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Gates/Gate2"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.0183105, -0.1604, -0.0757549)
shape = SubResource("BoxShape3D_4qhi4")

[node name="Gate3" type="Area3D" parent="Gates"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.025, 0.71, 1.31766)

[node name="Label3D" type="Label3D" parent="Gates/Gate3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.432918, 0.105994)
text = "Gate 3"
font_size = 65

[node name="CollisionShape3D" type="CollisionShape3D" parent="Gates/Gate3"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.0183105, -0.1604, -0.0757549)
shape = SubResource("BoxShape3D_4qhi4")

[connection signal="area_entered" from="Gates/Gate1" to="." method="_on_gate_1_area_entered"]
[connection signal="area_entered" from="Gates/Gate2" to="." method="_on_gate_2_area_entered"]
[connection signal="area_entered" from="Gates/Gate3" to="." method="_on_gate_3_area_entered"]
